<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/pb_fragmentMovie"
        android:layout_gravity="center"
        android:background="@color/halfTransparentBackground"
        android:paddingStart="150dp"
        android:paddingEnd="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>